ingress/scenarios/06-controller-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controller-test-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: controller-test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: controller-test
            port:
              number: 80
